// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when props.location.config={}, props.location.branches={}, and state.isLoading=false renders correctly 1`] = `
<main
  className="Play-main-3"
>
  <Title
    classes={
      Object {
        "button": "Play-button-1",
        "cardContent": "Play-cardContent-2",
        "main": "Play-main-3",
        "progress": "Play-progress-4",
      }
    }
    config={Object {}}
    displayAction={true}
    selectChoice={[Function]}
  />
</main>
`;

exports[`when props={} and state.isLoading=false renders correctly 1`] = `
<Redirect
  push={false}
  to={
    Object {
      "pathname": "/load",
      "search": undefined,
    }
  }
/>
`;

exports[`when props={} renders correctly 1`] = `
<div
  className="Play-progress-4"
>
  <WithStyles(LinearProgress) />
</div>
`;

exports[`with props.location.branches, state.currentBranchId, and state.isLoading=false renders correctly 1`] = `
<main
  className="Play-main-3"
>
  <Title
    classes={
      Object {
        "button": "Play-button-1",
        "cardContent": "Play-cardContent-2",
        "main": "Play-main-3",
        "progress": "Play-progress-4",
      }
    }
    config={Object {}}
    displayAction={false}
    selectChoice={[Function]}
  />
  <Branch
    choices={
      Array [
        Object {
          "Choice text.": "choice",
        },
      ]
    }
    classes={
      Object {
        "button": "Play-button-1",
        "cardContent": "Play-cardContent-2",
        "main": "Play-main-3",
        "progress": "Play-progress-4",
      }
    }
    config={Object {}}
    selectChoice={[Function]}
    text="Text."
  />
</main>
`;
